fix: fix click on ios

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body {
   -webkit-user-select: none;
   font-size: 0.6rem;
   font-weight: 400;
+  cursor:pointer;
 }
 a {
   cursor: pointer;
